[package]
name = "s7-sys"
version = "0.1.2"
authors = ["rn7s2 <mail@rn7s2.cn>"]
edition = "2021"
build = "build.rs"
license = "MIT"
categories = ["external-ffi-bindings"]
keywords = ["ffi", "bindings", "scheme", "scripting", "interpreter"]
description = "s7 Scheme bindings for Rust"
repository = "https://github.com/rn7s2/s7-sys"

[dependencies]

[build-dependencies]
bindgen = "^0.65.1"
cc = "^1.0.79"
