[package]
name = "s7-sys"
version = "0.1.4"
authors = ["rn7s2 <mail@rn7s2.cn>"]
edition = "2021"
build = "build.rs"
license = "MIT"
categories = ["external-ffi-bindings"]
keywords = ["ffi", "bindings", "scheme", "scripting", "interpreter"]
description = "Rust bindings to s7 Scheme C API"
repository = "https://github.com/rn7s2/s7-sys"
documentation = "https://docs.rs/s7-sys"


[build-dependencies]
bindgen = "0.69.4"
cc = "<1.0.97"
